objects/LOT_History__c.object
<CustomObject>
    <fields>
        <fullName>Account_Short_Name__c</fullName>
        <formula>Account__r.Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lot History</relationshipLabel>
        <relationshipName>LOT_History</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CREATE_DATE__c</fullName>
        <label>CREATE DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_ID__c</fullName>
        <label>CUSTOMER ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_SHORT_NAME__c</fullName>
        <label>CUSTOMER SHORT NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Date__c</fullName>
        <formula>LOT_Status1__r.CONFIRMED_DATE__c</formula>
        <label>Confirmed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Sold_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lot History (Contract Sold To Account)</relationshipLabel>
        <relationshipName>Lot_History2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Sold_To__c</fullName>
        <label>Contract Sold To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Part__c</fullName>
        <formula>LOT_Status1__r.CUST_PN__c</formula>
        <label>Customer Part #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Date__c</fullName>
        <formula>LOT_Status1__r.CUST_REQUEST_DATE__c</formula>
        <label>Customer Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_IN_WORK_CTR__c</fullName>
        <label>DATE IN WORK Center</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_OUT_WORK_CTR__c</fullName>
        <label>DATE OUT WORK Center</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_PLACED_HOLD__c</fullName>
        <label>Date Placed Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_REMOVED_HOLD__c</fullName>
        <label>Date Removed Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>LOT_Status1__r.CUST_PN_DESC__c</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lot History (End Customer)</relationshipLabel>
        <relationshipName>Lot_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <label>End Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FUTURE1__c</fullName>
        <label>FUTURE1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <formula>LOT_Status1__r.SHIP_PLANT_DESC__c</formula>
        <label>Facility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INITIAL_REL_IND__c</fullName>
        <label>INITIAL_REL_IND</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_DATE__c</fullName>
        <label>LAST_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LAST_USER__c</fullName>
        <label>LAST_USER</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLL__c</fullName>
        <formula>HYPERLINK( 
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+$Label.LotHistory_reportId_From_LotStatusReport+&apos;?pv0=&apos;+ LOT_Status1__r.Name, 
LOT_Status1__r.Legacy_Lot_Label__c
)</formula>
        <label>LLL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOT_NUM__c</fullName>
        <label>LOT_NUMBER</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOT_STATUS__c</fullName>
        <label>LOT_STATUS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOT_Status1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOT Status</label>
        <referenceTo>LOT_Status__c</referenceTo>
        <relationshipName>LOT_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOT_TYPE__c</fullName>
        <label>Lot Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_LOT_HISTORY__c</fullName>
        <externalId>true</externalId>
        <label>MD LOT HISTORY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nonet_Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nonet Lot</label>
        <referenceTo>Nonet_Lot__c</referenceTo>
        <relationshipName>LOT_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ON_HOLD_CODE__c</fullName>
        <label>ON_HOLD_CODE</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_HOLD_DESC__c</fullName>
        <label>ON HOLD Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlook_Date__c</fullName>
        <formula>LOT_Status1__r.OUTLOOK_DATE__c</formula>
        <label>Outlook Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PARENT_LOT__c</fullName>
        <label>PARENT_LOT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLANT_CODE__c</fullName>
        <label>FACILITY</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <formula>LOT_Status1__r.PO_NUM__c</formula>
        <label>PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <formula>Customer_Part__c +&apos; &apos;+&apos;:&apos;+&apos; &apos;+ Part__c +&apos; &apos;+&apos;:&apos;+&apos; &apos;+ Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <formula>LOT_Status1__r.IBM_PN__c</formula>
        <label>Part#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Quantity__c</fullName>
        <formula>LOT_Status1__r.PROJ_QTY__c</formula>
        <label>Project Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RETURNS_LOTS__c</fullName>
        <label>RETURNS_LOTS</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REWORK_LOTS__c</fullName>
        <label>Special</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_PARTNO__c</fullName>
        <label>PART NUMBER</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_PART_DESC__c</fullName>
        <label>PART Description</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPLIT_LOT__c</fullName>
        <label>SPLIT_LOT</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>START_QTY__c</fullName>
        <label>START Quantity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STOCK_IND__c</fullName>
        <label>STOCK_IND</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Band__c</fullName>
        <formula>LOT_Status1__r.IBM_SECT_BAND__c</formula>
        <label>Sector Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIME_PLACED_HOLD__c</fullName>
        <label>TIME_PLACED_HOLD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIME_REMOVED_HOLD__c</fullName>
        <label>TIME_REMOVED_HOLD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ULL__c</fullName>
        <formula>HYPERLINK( 
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+$Label.LotHistory_reportId_From_LotStatusReport+&apos;?pv0=&apos;+ LOT_Status1__r.Name, 
LOT_Status1__r.UNIFORM_LOT_LABEL__c 
)</formula>
        <label>ULL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPDATE_USER__c</fullName>
        <label>UPDATE USER</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WIP_as_of__c</fullName>
        <formula>LOT_Status1__r.WIP_AS_OF__c</formula>
        <label>WIP as of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WORK_CTR_DESC__c</fullName>
        <label>Gate Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WORK_CTR__c</fullName>
        <label>Gate Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD_Ships__c</fullName>
        <formula>LOT_Status1__r.YTD_SHIPS__c</formula>
        <label>YTD Ships</label>
        <type>Text</type>
    </fields>
    <label>Lot History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LOT History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lot History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>GFV_Report_Sharing__c</fullName>
        <label>GFV Report Sharing</label>
    </sharingReasons>
</CustomObject>